# bbh_full_stack

./: .envrc  .gitignore  TODO.md  main.py  pyproject.toml  tasks.py
V1.0/: README.md  main.py  pyproject.toml
aircraft_data/: Aircraft Descriptions.csv  Aircraft.csv  test.csv
apps/read_aircraft_data/: README.md  main.py  pyproject.toml  read_data.py  test_read_data.py
apps/trip_distance/: calculate_nm.py  get_distance.py  pyproject.toml
apps/trip_distance/trip_distance.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: DesignSpecificationsV0.1.md  Project_Overview.md  TODO.md
sharedlib/: README.md  pyproject.toml
sharedlib/src/sharedlib/: __init__.py  config.py  csv_reader.py
