[project]
name = "bbh-full-stack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "invoke>=2.2.0",
    "pytest>=8.4.1",
    "tabulate>=0.9.0",
]

[tool.uv.workspace]
members = [
    "app1",
    "sharedlib",
    "apps/read_aircraft_data",
]

[dependency-groups]
dev = [
    "ruff>=0.12.4",
]
