[project]
name = "sharedlib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "BenHorrisberger", email = "benhorrisberger@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
